--- a/templates/index.html
+++ b/templates/index.html
@@ -50,42 +50,54 @@
 						<ion-icon name="bag-outline"></ion-icon>
 						<span class="btn-badge">3</span>
 					</button>
-					<div class="shopping-cart">
-						<div class="cartbox">
-							<button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							</button>
-							<img src="assets/products/napaextend.jpg" alt="napa extend">
-							<div class="cart-content">
-								<h3>Napa Extend</h3>
-								<span class="cart-content-price">৳240.00</span>
-								<span class="quantity">qty: 1</span>
+				   <div>
+						<div class="shopping-cart">
+							<div class="cartbox">
+								<button class="cart-trash">
+									<ion-icon name="trash"></ion-icon>
+								</button>
+								<img src="assets/products/napaextend.jpg" alt="napa extend">
+								<div class="cart-content">
+									<h3>Napa Extend</h3>
+									<div style="display: grid; grid-template-columns: 0.5fr 1fr;gap: 1px;">
+										<span class="cart-content-price">৳240.00</span>
+										<span class="quantity">Times/day: 2</span></br>
+										<span class="quantity">Days: 7</span>
+									</div>
+								</div>
 							</div>
-						</div>
-						<div class="cartbox">
-							<button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							</button>
-							<img src="assets/products/napaextra.jpg" alt="napa extra">
-							<div class="cart-content">
-								<h3>Napa Extra</h3>
-								<span class="cart-content-price">৳610.00</span>
-								<span class="quantity">qty: 1</span>
+							<div class="cartbox">
+								<button class="cart-trash">
+									<ion-icon name="trash"></ion-icon>
+								</button>
+								<img src="assets/products/napaextra.jpg" alt="napa extra">
+								<div class="cart-content">
+									<h3>Napa Extra</h3>
+									<div style="display: grid; grid-template-columns: 0.5fr 1fr;gap: 1px;">
+										<span class="cart-content-price">৳610.00</span>
+										<span class="quantity">Times/day: 1</span></br>
+										<span class="quantity">Days: 15</span>
+									</div>
+								</div>
+								
 							</div>
-						</div>
-						<div class="cartbox">
-							<button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							</button>
-							<img src="assets/products/napa.jpg" alt="napa">
-							<div class="cart-content">
-								<h3>Napa</h3>
-								<span class="cart-content-price">৳610.00</span>
-								<span class="quantity">qty: 1</span>
+							<div class="cartbox">
+								<button class="cart-trash">
+									<ion-icon name="trash"></ion-icon>
+								</button>
+								<img src="assets/products/napa.jpg" alt="napa">
+								<div class="cart-content">
+									<h3>Napa</h3>
+									<div style="display: grid; grid-template-columns: 0.5fr 1fr;gap: 1px;">
+										<span class="cart-content-price">৳610.00</span>
+										<span class="quantity">Times/day: 1</span></br>
+										<span class="quantity">Days: 30</span>
+									</div>
+								</div>
 							</div>
+							<div class="total">Total: ৳1460.00</div>
+							<a href="#" class="cart-checkout-btn">Checkout</a>
 						</div>
-						<div class="total">Total: ৳1460.00</div>
-						<a href="#" class="cart-checkout-btn">Checkout</a>
 					</div>
 					<form action="#" class="user-login">
 						<input type="email" placeholder="Email" class="login-box">
