--- a/templates/index.html
+++ b/templates/index.html
@@ -487,8 +487,8 @@
 					<div class="showcase">
 						<div class="showcase-banner">
 							<a href="{%url 'prod' p_name=product.p_name %}">
-								<img  class="product-img default" src="data:image/jpeg;base64,{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
-								<img  class="product-img hover" src="data:image/jpeg;base64,{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
+								<img  class="product-img default" src="media/{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
+								<img  class="product-img hover" src="media/{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
 							</a>
 							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
 
