--- a/templates/index.html
+++ b/templates/index.html
@@ -30,16 +30,21 @@
 					</div>
 				</div>
 				
+				
 
 				<button class="action-btn menu-action" data-mobile-menu-open-btn>
 					<ion-icon name="menu"></ion-icon>
 				</button>
 				<div class="header-user-actions">
 					<div class="search-box">
-						<input class="search-txt" type="text" placeholder="Type to search...">
+						<input class="search-txt" id="search-input2" type="text" placeholder="Type to search...">
 						<button class="mobile-srch-btn action-btn">
 							<ion-icon name="search-outline"></ion-icon>
 						</button>
+						<div id="search-results2">
+
+					
+						</div>
 					</div>
 					<button id="select-image" class="action-btn">
 						<img src="{%static 'prescription.png'%}" alt="prescription-upload-icon" width="30">
