--- a/templates/index.html
+++ b/templates/index.html
@@ -57,26 +57,27 @@
 							</button>
 								<div>
 									
-								<div class="shopping-cart" >
-										<!-- HTML template for a product cartbox -->
-
-										<div class="cartbox" id="cartbox-${p_id}">
-											<button class="cart-trash">
-												<ion-icon name="trash"></ion-icon>
-											</button>
-											<img src="" alt="">
-											<div class="cart-content">
-												<h3 id="productName"></h3>
-												<div style="display: grid; grid-template-columns: 0.5fr 1fr;gap: 1px;">
-													<span class="cart-content-price" id="productPrice"></span>
-													<span class="quantity"></span><br>
-													<span class="quantity">Days: 7</span>
-												</div>
-											</div>
+						<div class="shopping-cart" >
+								<!-- HTML template for a product cartbox -->
+								<div id= "cart-container">
+									<!-- <div class="cartbox" id="cartbox-${p_id}">
+									  <button class="cart-trash">
+										<ion-icon name="trash"></ion-icon>
+									  </button>
+									  <img src="" alt="">
+									  <div class="cart-content">
+										<h3 id="productName-${p_id}"></h3>
+										<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
+										  <span class="cart-content-price" id="productPrice-${p_id}"></span>
+										  <span class="quantity"></span><br>
+										  <span class="quantity">Days: 7</span>
 										</div>
-
-									<div class="total">Total: ৳1460.00</div>
-								<a href="#" class="cart-checkout-btn">Checkout</a>
+									  </div>
+									</div> -->
+								  </div>
+								  
+							<div class="total">Total: ৳1460.00</div>
+						<a href="#" class="cart-checkout-btn">Checkout</a>
 						</div>
 
 
