--- a/templates/index.html
+++ b/templates/index.html
@@ -105,39 +105,39 @@
 						<div class="dropdown-panel">
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Diabetics Care</a>
+								
 								</li>
-								<li class="panel-list-item"><a href="#">Diabetics</a></li>
-								<li class="panel-list-item"><a href="#">Dental Care</a></li>
-								<li class="panel-list-item"><a href="#">Sexual Care</a></li>
-								<li class="panel-list-item"><a href="#">Baby Care</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">Cold & Allergies</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Heart Problems'%}">Heart Problems</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Diabetes'%}">Diabetes</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Respiratory Problems'%}">Respiratory Problems</a></li>
 							</ul>
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Covid Special</a>
+									
 								</li>
-								<li class="panel-list-item"><a href="#">Sanitizers</a></li>
-								<li class="panel-list-item"><a href="#">Surgical Masks</a></li>
-								<li class="panel-list-item"><a href="#">Hand Gloves</a></li>
-								<li class="panel-list-item"><a href="#">Covid Test Kit</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Neurological Problems'%}">Neurological Problems</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Arthritis or other types of pain'%}">Arthritis or other types of pain</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Sexual Wellness'%}">Sexual Wellness</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Herbal & Ayurvedic'%}">Herbal & Ayurvedic</a></li>
 							</ul>
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Men's Care</a>
+									
 								</li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
-								<li class="panel-list-item"><a href="#">Men Specific</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Infant & Mothers care'%}">Infant & Mothers care</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Supplements & Nutrition'%}">Supplements & Nutrition</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='More will be added late'%}">More will be added late</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">More will be added late</a></li>
 							</ul>
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									<a href="#">Women's Care</a>
+									
 								</li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
-								<li class="panel-list-item"><a href="#">Women Specific</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">More will be added late</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">More will be added late</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">More will be added late</a></li>
+								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">More will be added late</a></li>
 							</ul>
 						</div>
 					</li>
@@ -190,7 +190,7 @@
 			</div>
 			<ul class="mobile-menu-category-list">
 				<li class="menu-category">
-					<a href="" class="menu-title">Home</a>
+					<a href="{%url 'home'%}" class="menu-title">Home</a>
 				</li>
 				<li class="menu-category">
 					<button class="accordion-menu" data-accordion-btn>
@@ -203,16 +203,56 @@
 
 					<ul class="submenu-category-list" data-accordion>
 						<li class="submenu-category">
-							<a href="#" class="submenu-title">Diabetics</a>
+							<a href="{%url 'category' p_category='Mens'%}" class="submenu-title">Men's</a>
 						</li>
 						<li class="submenu-category">
-							<a href="#" class="submenu-title">Dental Care</a>
+							<a href="{%url 'category' p_category='Womens'%}" class="submenu-title">Women's</a>
 						</li>
 						<li class="submenu-category">
-							<a href="#" class="submenu-title">Sexual Care</a>
+							<a href="{%url 'category' p_category='BABY CARE'%}"  class="submenu-title">Baby Care</a>
 						</li>
 						<li class="submenu-category">
-							<a href="#" class="submenu-title">Baby care</a>
+							<a href="{%url 'category' p_category='Personal Hygiene'%}" class="submenu-title">Personal Hygiene</a>
+						</li>
+
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Medical Equipments' %}"class="submenu-title">Medical Equipments</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Cold & Allergies'%}"class="submenu-title">Cold & Allergies</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Heart Problems'%}"class="submenu-title">Heart Problems</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Diabetes'%}"class="submenu-title">Diabetes</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Respiratory Problems'%}"class="submenu-title">Respiratory Problems</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Neurological Problems'%}"class="submenu-title">Neurological Problems</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Arthritis or other types of pain'%}"class="submenu-title">Arthritis or other types of pain</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Sexual Wellness'%}"class="submenu-title">Sexual Wellness</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Herbal & Ayurvedic'%}"class="submenu-title">Herbal & Ayurvedic</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Infant & Mothers care'%}"class="submenu-title">Infant & Mothers care</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='Supplements & Nutrition'%}"class="submenu-title">Supplements & Nutrition</a>
+						</li>
+						<li class="submenu-category">
+						<a href="{%url 'category' p_category='More will be added late'%}"class="submenu-title">More will be added late</a>
+						</li>
+						<li class="submenu-category">
+							<a href="{%url 'category' p_category='More will be added late'%}"class="submenu-title">More will be added late</a>
 						</li>
 					</ul>
 				</li>
@@ -322,7 +362,7 @@
 		<!-- --------------
 			UPLOAD PRESCRIPTION
 		-------------- -->
-		<div class="prescription">
+		<div class="prescription" id="select-image2">
 			<div class="container">
 				<input type="file" id="file-upload" accept="image/*">
 				<label id="select-image" for="file-upload">Upload Prescription</label>
