--- a/static/style.css
+++ b/static/style.css
@@ -548,7 +548,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .submenu-category-list.active {
-	max-height: 148px;
+	max-height: 100vh;
 	visibility: visible;
 }
 
