--- a/templates/index.html
+++ b/templates/index.html
@@ -82,15 +82,15 @@
 
 
 						</div>
-					<form action="#" class="user-login">
-						<input type="email" placeholder="Email" class="login-box">
-						<input type="password" placeholder="Password" class="login-box">
-						<div class="forgotreg">
-							<a href="#">Forgot password?</a>
-							<a href="register.html">Register now!</a>
+						<div class="user-login">
+							{% if user.is_authenticated %}
+  							  <a href="{% url 'home' %}" class="form-btn">Profile</a>
+   							 <a href="{% url 'logout' %}" class="form-btn">Logout</a>
+							{% else %}
+  							  <a href="{% url 'login' %}" class="form-btn">Login</a>
+							{% endif %}
+
 						</div>
-						<input type="submit" value="Login" class="form-btn">
-					</form>
 				</div>
 			</div>
 		</div>
