--- a/templates/index.html
+++ b/templates/index.html
@@ -82,12 +82,12 @@
 
 
 						</div>
-						<div class="user-login">
+						<div style="text-align:center;" class="user-login">
 							{% if user.is_authenticated %}
-  							  <a href="{% url 'home' %}" class="form-btn">Profile</a>
+  							  <a href="{% url 'profile' %}" class="form-btn">Profile</a>
    							 <a href="{% url 'logout' %}" class="form-btn">Logout</a>
 							{% else %}
-  							  <a href="{% url 'login' %}" class="form-btn">Login</a>
+  							  <a  href="{% url 'login' %}" class="form-btn">Login</a>
 							{% endif %}
 
 						</div>
